# Team05_SEA-ME_DES

./: Doxyfile  README.md
.github/workflows/: documentations.yml  validate-merge.yml
DistributedEmbeddedSystems/: README.md
DistributedEmbeddedSystems/digital_cluster/: .gitignore  CMakeLists.txt  Dockerfile  README.md  automate.sh  automate_cross.sh  automate_env.sh  automate_test.sh  autonomybar.cpp  autonomybar.h  batterydial.cpp  batterydial.h  customdial.cpp  customdial.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tempbar.cpp  tempbar.h
DistributedEmbeddedSystems/digital_cluster/include/: autonomy.h  battery.h  mainwindow.h  speed.h  temperature.h
DistributedEmbeddedSystems/digital_cluster/src/: autonomy.cpp  battery.cpp  mainwindow.cpp  speed.cpp  temperature.cpp
DistributedEmbeddedSystems/digital_cluster/test/: autonomy.cpp  battery.cpp  speed.cpp  temperature.cpp  window.cpp
Motors/: Makefile  README.md  tests.txt
Motors/Notes/: Project_Architecture.md
Motors/includes/: jetracer.hpp
Motors/sources/: Project Architecture  buttonsReferences  jetracer.cpp  main.cpp
arduino/: README_arduino.md  speed_sensor_monitor.ino
docs/: annotated.html  autonomy_8h.html  autonomy_8h__dep__incl.map  autonomy_8h__dep__incl.md5  autonomy_8h__incl.map  autonomy_8h__incl.md5  autonomy_8h_source.html  battery_8h.html  battery_8h__dep__incl.map  battery_8h__dep__incl.md5  battery_8h__incl.map  battery_8h__incl.md5  battery_8h_source.html  classAutonomy-members.html  classAutonomy.html  classAutonomyT-members.html  classAutonomyT.html  classAutonomyT__coll__graph.map  classAutonomyT__coll__graph.md5  classAutonomyT__inherit__graph.map  classAutonomyT__inherit__graph.md5  classAutonomy__coll__graph.map  classAutonomy__inherit__graph.md5  classBattery-members.html  classBattery.html  classBatteryT-members.html  classBatteryT.html  classBatteryT__coll__graph.map  classBatteryT__coll__graph.md5  classBatteryT__inherit__graph.map  classBatteryT__inherit__graph.md5  classBattery__inherit__graph.map  classBattery__inherit__graph.md5  classMainWindow-members.html  classMainWindow.html  classMockPainter-members.html  classMockPainter.html  classMockPainter__coll__graph.md5  classMockPainter__inherit__graph.map  classQPainterCaller-members.html  (+122 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
html/: md_README.html  pages.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  pages_0.js  pages_2.js  searchdata.js
